--- a/VoiceAssistant/requirements.txt
+++ b/VoiceAssistant/requirements.txt
@@ -1,131 +1,31 @@
-aptur==0.5.2
-asn1crypto==0.24.0
-attrs==19.3.0
-backcall==0.1.0
-bcrypt==3.1.6
-beautifulsoup4==4.8.2
-bleach==3.1.1
-blinker==1.4
-Brlapi==0.6.7
-certifi==2018.8.24
+beautifulsoup4==4.9.0
+bs4==0.0.1
+certifi==2020.4.5.1
 chardet==3.0.4
-command-not-found==0.3
-cryptography==2.6.1
-cupshelpers==1.0
-dbus-python==1.2.12
+comtypes==1.1.7
 decorator==4.4.2
-defer==1.0.6
-defusedxml==0.6.0
-distro==1.3.0
-distro-info===0.21ubuntu4
 docopt==0.6.2
-duplicity==0.8.4
-entrypoints==0.3
-evdev==1.1.2
-fasteners==0.12.0
-future==0.16.0
-httplib2==0.11.3
-idna==2.6
-importlib-metadata==1.5.0
-ipykernel==5.1.4
-ipython==7.13.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-jedi==0.16.0
-Jinja2==2.11.1
+geotext==0.4.0
+googletrans==2.4.0
+idna==2.9
 Js2Py==0.68
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.0.0
-jupyter-console==6.1.0
-jupyter-core==4.6.3
-keyring==18.0.1
-keyrings.alt==3.1.1
-language-selector==0.1
-launchpadlib==1.10.7
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lockfile==0.12.2
-louis==3.10.0
-lutris==0.5.3
-macaroonbakery==1.2.3
-Mako==1.0.7
-MarkupSafe==1.1.0
-mistune==0.8.4
-monotonic==1.5
-nbconvert==5.6.1
-nbformat==5.0.4
-netifaces==0.10.4
-notebook==6.0.3
-oauthlib==2.1.0
-olefile==0.46
 packaging==20.3
-pandocfilters==1.4.2
-paramiko==2.6.0
-parso==0.6.2
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==6.1.0
 pipwin==0.4.9
-powerline-status==2.7
-prometheus-client==0.7.1
-prompt-toolkit==3.0.3
-protobuf==3.6.1
-psutil==5.5.1
-ptyprocess==0.6.0
 PyAudio==0.2.11
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-Pygments==2.5.2
-PyGObject==3.34.0
 pyjsparser==2.7.1
-PyJWT==1.7.0
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyparsing==2.4.6
+pyparsing==2.4.7
+pypiwin32==223
 PyPrind==2.11.2
-PyQt5==5.14.0
-PyQt5-sip==12.7.1
-PyQtChart==5.14.0
-pyRFC3339==1.1
-pyrsistent==0.15.7
 pySmartDL==1.3.3
-python-apt==1.9.0+ubuntu1.3
-python-dateutil==2.7.3
-python-debian==0.1.36
-pytz==2019.2
-pyxdg==0.25
-PyYAML==5.1.2
-pyzmq==19.0.0
-qtconsole==4.7.1
-QtPy==1.9.0
-reportlab==3.5.23
-requests==2.21.0
-requests-unixsocket==0.1.5
-SecretStorage==2.3.1
+pyttsx3==2.87
+pytz==2019.3
+pywin32==227
+requests==2.23.0
 selenium==3.141.0
-Send2Trash==1.5.0
-simplejson==3.16.0
-six==1.12.0
+six==1.14.0
 soupsieve==2.0
 SpeechRecognition==3.8.1
-system-service==0.3
-systemd-python==234
-terminado==0.8.3
-testpath==0.4.4
-tornado==6.0.4
-traitlets==4.3.3
 tzlocal==2.0.0
-ubuntu-advantage-tools==19.5
-ufw==0.36
-unattended-upgrades==0.1
-unity-tweak-tool==0.0.7
-urllib3==1.24.1
-usb-creator==0.3.7
-wadllib==1.3.3
-wcwidth==0.1.8
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-xkit==0.0.0
-zipp==3.1.0
+urllib3==1.25.8
+validators==0.14.3
+WMI==1.4.9
